# Landmark-Detection-on-a-3D-Facial-Point-Cloud-PCA

./: README.md  pyproject.toml  requirements.txt  task2.ipynb
