[project]
name = "landmark-detection-on-a-3d-facial-point-cloud-pca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
    "plotly>=6.1.2",
    "nbformat>=4.2.0",
]
